syntax = "proto3";

package graph;

message Vertex {
  uint64 id = 1;
  message VertexState {
    message Accumulators {
      repeated double a = 1;
    }
    double old_result = 1;
    repeated Accumulators accumulator = 2;
    repeated double vertex_constants = 3;
  }
  optional VertexState state = 2;
}

message Edge {
  uint64 src = 1;
  uint64 dst = 2;
  // @TODO(future): typed edges
}

message VertexPartition {
  repeated Vertex vertices = 1;
}

message InteractionEdges {
  repeated Edge edges = 1;
}

message Interaction {
  VertexPartition src = 1;
  VertexPartition dst = 2;
  InteractionEdges directed_edges = 3;
}
